--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F4F5FA"
+        android:background="#f7f7f7"
         tools:context=".home.activity.ChangepasswordActivity">
 
         <RelativeLayout
@@ -54,6 +54,8 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/search_background"
                 android:ems="10"
+                android:textColor="@color/purple_500"
+                android:textColorHint="@color/md_grey_400"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="@dimen/padd_10"
                 android:hint="Old Password"
@@ -73,6 +75,8 @@
                 android:background="@drawable/search_background"
                 android:layout_below="@id/editTextOldPassword"
                 android:ems="10"
+                android:textColor="@color/purple_500"
+                android:textColorHint="@color/md_grey_400"
                 android:fontFamily="@font/amaranth"
                 android:hint="New Password"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
@@ -95,6 +99,8 @@
                 android:ems="10"
                 android:fontFamily="@font/amaranth"
                 android:hint="New Password"
+                android:textColor="@color/purple_500"
+                android:textColorHint="@color/md_grey_400"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="@dimen/padd_10"
                 android:inputType="textPersonName"
