--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#f7f7f7"
         tools:context=".home.activity.ForgotPasswordActivity">
 
         <RelativeLayout
@@ -53,6 +54,8 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/search_background"
                 android:ems="10"
+                android:textColor="@color/purple_500"
+                android:textColorHint="@color/md_grey_400"
                 android:drawableLeft="@drawable/ic_baseline_email_24"
                 android:drawablePadding="@dimen/padd_10"
                 android:hint="E-mail"
