--- a/app/src/main/res/layout/activity_price_details.xml
+++ b/app/src/main/res/layout/activity_price_details.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#F4F5FA"
         tools:context=".home.activity.PriceDetailsActivity">
 
         <include
@@ -274,6 +275,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:background="@color/white"
                 android:text="Rs.15000/-"
                 android:textColor="@color/black" />
