--- a/app/src/main/res/layout/layout_cart.xml
+++ b/app/src/main/res/layout/layout_cart.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/imageView_item"
-                android:text="10 %off"
+                android:text="@{`Size: ` +cartItems.size_name}"
                 android:padding="@dimen/size_2dp"
                 android:layout_marginLeft="@dimen/size_16dp"
                 android:textStyle="normal"
@@ -95,7 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_price"
                 android:layout_toRightOf="@id/imageView_item"
-                android:layout_marginLeft="@dimen/size_16sp"
+                android:layout_marginLeft="@dimen/size_18dp"
                 android:backgroundTint="@color/purple_700"
                 android:background="@color/purple_700"
                 android:layout_marginStart="@dimen/size_5dp"
