--- a/app/src/main/res/layout/layout_shipaddress.xml
+++ b/app/src/main/res/layout/layout_shipaddress.xml
@@ -44,9 +44,8 @@
                 android:singleLine="true"
                 android:layout_marginTop="@dimen/size_5dp"
                 android:textColor="@color/purple_500"
+                android:layout_toRightOf="@id/textView_buildingnumber"
                 android:fontFamily="@font/amaranth"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/size_15dp"
                 android:text="@{address.address}"
                 android:padding="@dimen/size_5dp"
                 android:layout_marginLeft="@dimen/size_16dp"/>
@@ -72,7 +71,7 @@
                 android:textColor="@color/purple_500"
                 android:layout_below="@id/textView_buildingnumber"
                 android:layout_marginTop="@dimen/size_8dp"
-                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/textView_streetNumber"
                 android:fontFamily="@font/amaranth"
                 android:layout_marginRight="@dimen/size_15dp"
                 android:text="@{address.pincode}"
@@ -102,7 +101,7 @@
                 android:layout_below="@id/textView_streetNumber"
                 android:layout_marginTop="@dimen/size_8dp"
                 android:layout_marginBottom="@dimen/size_5dp"
-                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/textView_zoneNumber"
                 android:layout_marginRight="@dimen/size_15dp"
                 android:fontFamily="@font/amaranth"
                 android:text="@{address.landmark}"
