--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -16,44 +16,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/white"
-            android:layout_marginRight="@dimen/size_15dp"
-            android:layout_below="@id/layoutBase"
-            app:cardCornerRadius="@dimen/size_8dp"
-            android:layout_marginLeft="@dimen/size_15dp"
-            android:layout_marginTop="@dimen/size_15dp"
-            app:cardElevation="@dimen/padd_10">
 
-            <TextView
-                android:id="@+id/text_nodata"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="No cart Items"
-                android:layout_marginTop="@dimen/size_25dp"
-                android:textColor="@color/md_grey_300"
-                android:textSize="@dimen/size_25dp"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                android:gravity="center"/>
-
-
-            <EditText
-                android:id="@+id/edittext_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/edittext_background"
-                android:hint="Search Here"
-                android:padding="@dimen/padd_10"
-                android:fontFamily="@font/amaranth"
-                android:layout_centerHorizontal="true"
-                android:drawableLeft="@drawable/ic_baseline_search_24"
-                android:drawablePadding="@dimen/padd_10"/>
-
-        </androidx.cardview.widget.CardView>
 
 
 
@@ -63,7 +26,22 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/padd_10"
             android:layout_marginBottom="@dimen/size_50dp"
-            android:layout_below="@id/card_search"/>
+            android:layout_below="@id/layoutBase"
+           />
+
+        <TextView
+            android:id="@+id/text_nodata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No cart Items"
+            android:layout_marginTop="@dimen/size_25dp"
+            android:layout_centerInParent="true"
+            android:textColor="@color/md_grey_300"
+            android:textSize="@dimen/size_25dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:gravity="center"/>
+
 
         <LinearLayout
             android:id="@+id/linear_checkout"
@@ -73,11 +51,25 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/txtTotal"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:paddingStart="@dimen/padd_10"
+                android:text="Total :"
+                android:textColor="@color/purple_700"
+                android:textSize="18sp" />
+            <TextView
                 android:id="@+id/txtAmount"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:background="@color/white"
                 android:gravity="center_vertical"
                 android:paddingStart="@dimen/padd_10"
