--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".home.activity.EditProfileActivity">
 
         <include
@@ -45,16 +46,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
+                    android:maxLength="10"
                     android:fontFamily="@font/amaranth"
-                    android:textColor="@color/purple_500"
                     android:drawableLeft="@drawable/ic_baseline_smartphone_24"
                     android:layout_marginTop="@dimen/padd_10"
                     android:layout_marginLeft="@dimen/padd_10"
+                    android:textColor="@color/purple_500"
+                    android:textColorHint="@color/md_grey_400"
                     android:layout_marginRight="@dimen/padd_10"
                     android:background="@drawable/edittext_background"
                     android:padding="@dimen/padd_10"
                     android:hint="Enter Phone Number"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:drawablePadding="@dimen/size_5dp"
                     />
                 <EditText
@@ -63,9 +66,10 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:fontFamily="@font/amaranth"
-                    android:textColor="@color/purple_500"
                     android:layout_marginTop="@dimen/padd_10"
                     android:layout_marginLeft="@dimen/padd_10"
+                    android:textColor="@color/purple_500"
+                    android:textColorHint="@color/md_grey_400"
                     android:layout_marginRight="@dimen/padd_10"
                     android:background="@drawable/edittext_background"
                     android:padding="@dimen/padd_10"
@@ -75,7 +79,7 @@
                     android:drawablePadding="@dimen/size_5dp"
                     />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/button_submit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -83,6 +87,8 @@
                     android:layout_marginLeft="@dimen/size_15dp"
                     android:layout_marginRight="@dimen/size_15dp"
                     android:text="Submit"
+                    android:textColor="@color/white"
+                    android:background="@color/purple_500"
                     android:layout_marginBottom="@dimen/size_15dp"/>
 
 
