--- a/app/src/main/res/layout/activity_my_location.xml
+++ b/app/src/main/res/layout/activity_my_location.xml
@@ -5,6 +5,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".home.activity.MyLocationActivity">
 
         <include
