--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -25,15 +25,15 @@
     <include
         layout="@layout/content_main" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/size_16sp"
-        android:background="@color/white"
-        android:backgroundTint="@color/white"
-        android:layout_marginBottom="@dimen/size_70dp"
-        android:src="@drawable/ic_shopping_cart_24" />
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/fab"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom|end"-->
+<!--        android:layout_marginRight="@dimen/size_16sp"-->
+<!--        android:background="@color/white"-->
+<!--        android:backgroundTint="@color/white"-->
+<!--        android:layout_marginBottom="@dimen/size_70dp"-->
+<!--        android:src="@drawable/ic_shopping_cart_24" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
