--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -9,30 +9,30 @@
         tools:context=".home.fragments.CartFragment">
 
         <!-- TODO: Update blank fragment layout -->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/white"
-            android:layout_marginRight="@dimen/size_15dp"
-            app:cardCornerRadius="@dimen/size_8dp"
-            android:layout_marginLeft="@dimen/size_15dp"
-            android:layout_marginTop="@dimen/size_15dp"
-            app:cardElevation="@dimen/padd_10">
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:id="@+id/card_search"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:cardBackgroundColor="@color/white"-->
+<!--            android:layout_marginRight="@dimen/size_15dp"-->
+<!--            app:cardCornerRadius="@dimen/size_8dp"-->
+<!--            android:layout_marginLeft="@dimen/size_15dp"-->
+<!--            android:layout_marginTop="@dimen/size_15dp"-->
+<!--            app:cardElevation="@dimen/padd_10">-->
 
-            <EditText
-                android:id="@+id/edittext_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/edittext_background"
-                android:hint="Search Here"
-                android:padding="@dimen/padd_10"
-                android:fontFamily="@font/amaranth"
-                android:layout_centerHorizontal="true"
-                android:drawableLeft="@drawable/ic_baseline_search_24"
-                android:drawablePadding="@dimen/padd_10"/>
+<!--            <EditText-->
+<!--                android:id="@+id/edittext_search"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/edittext_background"-->
+<!--                android:hint="Search Here"-->
+<!--                android:padding="@dimen/padd_10"-->
+<!--                android:fontFamily="@font/amaranth"-->
+<!--                android:layout_centerHorizontal="true"-->
+<!--                android:drawableLeft="@drawable/ic_baseline_search_24"-->
+<!--                android:drawablePadding="@dimen/padd_10"/>-->
 
-        </androidx.cardview.widget.CardView>
+<!--        </androidx.cardview.widget.CardView>-->
 
         <TextView
             android:id="@+id/text_nodata"
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:text="No cart Items"
             android:layout_marginTop="@dimen/size_25dp"
+            android:layout_centerInParent="true"
             android:textColor="@color/md_grey_300"
             android:textSize="@dimen/size_25dp"
             android:layout_gravity="center"
@@ -53,9 +54,8 @@
             android:id="@+id/recycler_cartItems"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/padd_10"
             android:layout_marginBottom="@dimen/size_50dp"
-            android:layout_below="@id/card_search"/>
+            />
 
         <LinearLayout
             android:id="@+id/linear_checkout"
