--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,6 +57,7 @@
                             android:layout_marginBottom="@dimen/size_15dp"
                             app:cardCornerRadius="@dimen/size_8dp"
                             app:cardElevation="@dimen/size_10dp"
+                            app:cardBackgroundColor="@color/white"
                             app:contentPaddingTop="15dp">
 
                             <LinearLayout
@@ -65,6 +66,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/text_profilename"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
