--- a/app/src/main/res/layout/layout_address.xml
+++ b/app/src/main/res/layout/layout_address.xml
@@ -46,8 +46,7 @@
                 android:layout_marginTop="@dimen/size_5dp"
                 android:textColor="@color/purple_500"
                 android:fontFamily="@font/amaranth"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/padd_10"
+                android:layout_toRightOf="@id/textView_buildingnumber"
                 android:text="@{address.address}"
                 android:padding="@dimen/size_5dp"
                 android:layout_marginLeft="@dimen/size_16dp"/>
@@ -73,7 +72,7 @@
                 android:textColor="@color/purple_500"
                 android:layout_below="@id/textView_buildingnumber"
                 android:layout_marginTop="@dimen/size_8dp"
-                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/textView_streetNumber"
                 android:fontFamily="@font/amaranth"
                 android:layout_marginRight="@dimen/padd_10"
                 android:text="@{address.pincode}"
@@ -101,8 +100,8 @@
                 android:textColor="@color/purple_500"
                 android:layout_below="@id/textView_streetNumber"
                 android:layout_marginTop="@dimen/size_8dp"
-                android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/padd_10"
+                android:layout_toRightOf="@id/textView_zoneNumber"
                 android:fontFamily="@font/amaranth"
                 android:text="@{address.landmark}"
                 android:padding="@dimen/size_5dp"
