--- a/app/src/main/res/layout/layout_orderitems.xml
+++ b/app/src/main/res/layout/layout_orderitems.xml
@@ -67,7 +67,7 @@
                 android:textStyle="bold"
                 android:singleLine="true"
                 android:layout_below="@id/relativeLayout"
-                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/text_oreder_Id"
                 android:layout_marginRight="@dimen/size_16dp"
                 android:layout_marginTop="@dimen/size_10dp"
                 android:layout_marginLeft="@dimen/size_16dp"
@@ -92,8 +92,8 @@
                 android:layout_height="wrap_content"
                 android:text="@{ordereditems.quantity}"
                 android:textStyle="bold"
-                android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/size_20dp"
+                android:layout_toRightOf="@id/text_oreder_date"
                 android:textColor="@color/black"
                 android:layout_below="@id/text_oreder_Id"
                 android:layout_marginTop="@dimen/size_10dp"
@@ -102,13 +102,40 @@
 
 
             <TextView
+                android:id="@+id/text_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Size  :"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@id/text_oreder_date"
+                android:layout_marginTop="@dimen/size_10dp"
+                android:layout_marginLeft="@dimen/size_16dp"
+                android:layout_marginBottom="@dimen/size_5dp"
+                android:textSize="@dimen/size_16dp"/>
+
+            <TextView
+                android:id="@+id/oreder_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{ordereditems.size_name}"
+                android:textStyle="bold"
+                android:layout_toRightOf="@id/text_size"
+                android:layout_marginRight="@dimen/size_16dp"
+                android:textColor="@color/black"
+                android:layout_below="@id/text_oreder_date"
+                android:layout_marginTop="@dimen/size_10dp"
+                android:layout_marginLeft="@dimen/size_16dp"
+                android:layout_marginBottom="@dimen/size_5dp"
+                android:textSize="@dimen/size_16dp"/>
+            <TextView
                 android:id="@+id/text_oreder_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Price  :"
                 android:textStyle="bold"
                 android:textColor="@color/black"
-                android:layout_below="@id/text_oreder_date"
+                android:layout_below="@id/text_size"
                 android:layout_marginTop="@dimen/size_10dp"
                 android:layout_marginLeft="@dimen/size_16dp"
                 android:layout_marginBottom="@dimen/size_5dp"
@@ -120,10 +147,10 @@
                 android:layout_height="wrap_content"
                 android:text="@{ordereditems.price}"
                 android:textStyle="bold"
-                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/text_oreder_status"
                 android:layout_marginRight="@dimen/size_16dp"
                 android:textColor="@color/black"
-                android:layout_below="@id/text_oreder_date"
+                android:layout_below="@id/oreder_size"
                 android:layout_marginTop="@dimen/size_10dp"
                 android:layout_marginLeft="@dimen/size_16dp"
                 android:layout_marginBottom="@dimen/size_5dp"
