--- a/app/src/main/res/layout/layout_subitems.xml
+++ b/app/src/main/res/layout/layout_subitems.xml
@@ -27,13 +27,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/favourite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/size_10dp"
-                    android:src="@drawable/ic_baseline_favorite_border_24"
-                    android:layout_gravity="right"/>
+<!--                <ImageView-->
+<!--                    android:id="@+id/favourite"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:padding="@dimen/size_10dp"-->
+<!--                    android:src="@drawable/ic_baseline_favorite_border_24"-->
+<!--                    android:layout_gravity="right"/>-->
 
 
                 <ImageView
