--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -10,11 +10,14 @@
         android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title="@string/mycart" />
 
-    <item android:id="@+id/bottomnavigationFavorite"
-        android:icon="@drawable/ic_baselin_favorite_border_24"
-        android:title="@string/favorites"/>
     <item
         android:id="@+id/bottomnavigationProfile"
         android:icon="@drawable/ic_baselin_person_24"
         android:title="@string/profile"/>
+
+    <item
+        android:id="@+id/bottomnavigationSettings"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/settings"/>
+
 </menu>
